--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "gatsby-remark-sub-sup": "^1.0.0",
     "gatsby-source-filesystem": "4.15.0",
     "gatsby-source-ghost": "5.0.0",
-    "gatsby-transformer-katex": "^1.2.1",
     "gatsby-transformer-rehype": "https://github.com/ssks-002/ssks002-gatsby-transformer-rehype",
     "gatsby-transformer-remark": "5.0",
     "gatsby-transformer-sharp": "4.15.1",
@@ -68,8 +67,11 @@
     "react-infinite-scroller": "^1.2.6",
     "react-responsive": "^9.0.0",
     "react-share": "^4.4.1",
+    "rehype-katex": "^7.0.1",
     "rehype-parse": "^9.0.1",
     "rehype-react": "^8.0.0",
+    "rehype-stringify": "^10.0.1",
+    "unified": "^11.0.5",
     "url": "0.11.0"
   }
 }
